--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport"content="width-device-width,initial-scale=1.0"/>
 <script src="https://kit.fontawesome.com/f1f64a75c3.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="Style3.css">
+<link rel="stylesheet" href="style.css">
 <title>Hotel</title>
 </head>
 <body>
